8177951: Charset problem when the name of the sound device contains Chinese character

Reviewed-by: amenkov, serb